--- a/src/styling/css/main.css
+++ b/src/styling/css/main.css
@@ -28,12 +28,45 @@
 .login-page-container {
   background: #ded9ee;
   padding: 2rem;
+  border-radius: 2rem;
+  width: 50%;
+}
+
+.login-page-container .login-page-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2rem;
+  font-weight: 900;
+  font-size: 3rem;
+}
+
+.login-page-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 body {
   background: -webkit-gradient(linear, left top, right top, from(#43cea2), to(#185a9d)) fixed;
   background: linear-gradient(to right, #43cea2, #185a9d) fixed;
-  color: #e0e0e0;
+  color: #000;
   line-height: 1;
   overflow: hidden;
 }
