--- a/src/styling/scss/_login.scss
+++ b/src/styling/scss/_login.scss
@@ -7,5 +7,19 @@
   &-container {
     background: $container-color;
     padding: 2rem;
+    border-radius: 2rem;
+    width: 50%;
+
+    .login-page-title {
+      @include flex-center;
+      margin-bottom: 2rem;
+      font-weight: 900;
+      font-size: 3rem;
+    }
+  }
+
+  &-btns {
+    @include flex-center;
+    flex-direction: column;
   }
 }
