--- a/src/styling/css/main.css
+++ b/src/styling/css/main.css
@@ -63,6 +63,34 @@
           flex-direction: column;
 }
 
+.login-page-btns .btn {
+  padding: 0.8rem 1.8rem;
+  border-radius: 2rem;
+  outline: none;
+  border: none;
+  margin: 1rem auto;
+  background: -webkit-gradient(linear, left top, right top, from(#43cea2), to(#185a9d));
+  background: linear-gradient(to right, #43cea2, #185a9d);
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.login-page-btns .btn:hover {
+  -webkit-transform: translateY(-7px);
+          transform: translateY(-7px);
+}
+
+.login-page-btns .btn:active {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
+
 body {
   background: -webkit-gradient(linear, left top, right top, from(#43cea2), to(#185a9d)) fixed;
   background: linear-gradient(to right, #43cea2, #185a9d) fixed;
