--- a/src/styling/scss/_login.scss
+++ b/src/styling/scss/_login.scss
@@ -1,10 +1,39 @@
 @import './config';
-
+@import url('https://fonts.googleapis.com/css2?family=Rampart+One&display=swap');
 .login-page {
   @include flex-center;
-  height: 100vh;
+  height: 90vh;
+  flex-direction: column;
 
+  &-header {
+    text-align: center;
+    margin-top: 2rem;
+    &-logo {
+      font-size: 4.2rem;
+      @include logo;
+    }
+
+    &-headline {
+      font-size: 5rem;
+      font-family: fantasy;
+      color: $container-color;
+      margin-top: 3rem;
+      letter-spacing: 5px;
+      animation: floatt 2s alternate ease-in-out infinite;
+
+      @keyframes floatt {
+        0% {
+          transform: translateY(-2rem);
+        }
+
+        100% {
+          transform: translateY(2rem);
+        }
+      }
+    }
+  }
   &-container {
+    margin: auto;
     background: $container-color;
     padding: 2rem;
     border-radius: $border-r;
