--- a/src/styling/scss/main.scss
+++ b/src/styling/scss/main.scss
@@ -1,8 +1,30 @@
 @import './config';
 @import 'login';
+@import './chat';
+
 body {
   background: linear-gradient(to right, $primary-color, $secondary-color) fixed;
   color: get-text-color($text-color);
   line-height: 1;
   overflow: hidden;
+}
+
+.btn {
+  border-radius: $border-r;
+  outline: none;
+  border: none;
+  margin: 1rem auto;
+  background: linear-gradient(to right, $primary-color, $secondary-color);
+  font-size: 1.4rem;
+  color: lighten($container-color, 60%);
+  font-weight: map-get($weights, medium);
+  cursor: pointer;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
+  transition: $transition;
+  &:hover {
+    transform: translateY(-7px);
+  }
+  &:active {
+    transform: scale(0.95);
+  }
 }
